--- a/readme
+++ b/readme
@@ -7,3 +7,7 @@ npm install nome_do_modulo
 i = install
 
 npm i lodash
+
+
+instalar  de forma global (-g) e vai instalar numa pasta global
+npm i -g nodemon
